fix logout button dark mode

--- a/frontend/src/app/core/side-nav/side-nav.component.scss
+++ b/frontend/src/app/core/side-nav/side-nav.component.scss
@@ -95,6 +95,9 @@
     &:hover {
       background-color: #ffa2a2;
     }
+    &--dark:hover {
+      background-color: #ff00006c;
+    }
   }
 }
 
